Restructured layout and fixed styling issues on various pages
This commit addresses some front-end issues that were affecting
the UI of the site. This includes:

- Corrected the alignment and styling of the registration and login
  pages to ensure consistency across the site. This involved a decent
  overhaul of the CSS, as I had to ensure elements were properly aligned and
  visually coherent.

- Created a new CSS file for the LoginPage and merged the existing CSS code into it from the
App.css file. This decision was made to make organization easier

- Fixed a layout issue caused by the global box-sizing property
  that led to content overflow issues. This required removing the
  global styling rule and applying box-sizing more to
  specific elements instead.

- Enhanced the responsiveness of the device details page, particularly
  improving the form input and table display. Adjustments were made to
  the CSS to ensure proper alignment and prevent elements from
  overflowing their containers.

- Various CSS and JS tweaks to improve site aesthetic and
  functionality.

 We will need to test this further to ensure compatibility across all browsers and devices.

--- a/src/App.css
+++ b/src/App.css
@@ -39,25 +39,6 @@ code {
     monospace;
 }
 
-.login-container {
-  margin-top: 81px;  /* Adjusted margin to reduce space */
-}
-
-.login-label {
-  display: block;
-  margin: 10px 0 5px;  /* Adjusted margin to reduce space between label and input */
-}
-
-.login-input {
-  padding: 5px;
-  margin-bottom: 25px;  /* Adjusted margin to create space between inputs */
-}
-
-.login-submit {
-  padding: 15px 11px;
-  cursor: pointer;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
